--- a/css/app.css
+++ b/css/app.css
@@ -54,9 +54,9 @@ h1 {
 .deck .card {
     height: 125px;
     width: 125px;
-    background: #2e3d49;
+    background: #2e3d49; /*nile blue*/
     font-size: 0;
-    color: #ffffff;
+    color: #ffffff; /*white*/
     border-radius: 8px;
     cursor: pointer;
     display: flex;
@@ -67,7 +67,7 @@ h1 {
 
 .deck .card.open {
     transform: rotateY(0);
-    background: #02b3e4;
+    background: #02b3e4; /*light blue*/
     cursor: default;
 }
 
@@ -77,14 +77,16 @@ h1 {
 
 .deck .card.match {
     cursor: default;
-    background: #02ccba;
+    background: #02ccba; /*turquoise*/
     font-size: 33px;
 }
 
 /* added new no-match class */
 .deck .card.no-match {
     transform: rotateY(0);
-    background: #aa7ecd;
+    background: #aa7ecd; /*purple*/
+    cursor: default;
+    font-size: 33px;
 }
 
 /*
