--- a/css/app.css
+++ b/css/app.css
@@ -69,6 +69,7 @@ h1 {
     transform: rotateY(0);
     background: #02b3e4; /*light blue*/
     cursor: default;
+    pointer-events: none;
 }
 
 .deck .card.show {
