--- a/css/app.css
+++ b/css/app.css
@@ -116,3 +116,34 @@ h1 {
     float: right;
     cursor: pointer;
 }
+
+.modal { /* Added this to the Udacity starter code. Help from: https://www.w3schools.com/howto/howto_css_modals.asp*/
+    /*display: none; /* Hidden by default */
+    visibility:hidden;
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 25%; /* Full width */
+    height: 25%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+.modal-content { /* Added this to the Udacity starter code. Help from: https://www.w3schools.com/howto/howto_css_modals.asp*/
+    background-color: #fefefe;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; /* Could be more or less, depending on screen size */
+}
+
+.show-modal { /* Added this to the Udacity starter code. Help from: https://sabe.io/tutorials/how-to-create-modal-popup-box*/
+    opacity: 1;
+    visibility: visible;
+    transform: scale(1.0);
+    transition: visibility 0s linear 0s, opacity 0.25s 0s, transform 0.25s;
+}
+
+/* Try some of these styles for the modal box: https://sabe.io/tutorials/how-to-create-modal-popup-box;*/ 
