--- a/css/app.css
+++ b/css/app.css
@@ -112,61 +112,42 @@ h1 {
     display: inline-block;
 }
 
+.score-panel .stars-hide { /*added this class */
+    /*visibility: hidden;*/
+    display: none;
+}
+
 .score-panel .restart {
     float: right;
     cursor: pointer;
 }
 
-.modal { /* Added this to the Udacity starter code. Help from: https://www.w3schools.com/howto/howto_css_modals.asp*/
-    /*display: none; /* Hidden by default */
+.modal { /* 2nd version test - Added this to the Udacity starter code. Help from: https://www.w3schools.com/howto/howto_css_modals.asp*/
     visibility: hidden;
     position: absolute; /* Stay in place */
     z-index: 1; /* Sit on top */
-    /*padding: 20px;*/
-    /*left: 0;*/
-    /*top: 0;*/
-    /*width: 15%; /* Full width */
-    /*height: 15%; /* Full height */
-    /* overflow: auto; /* Enable scroll if needed */
-    /*background-color: /*rgb(0,0,0); /* Fallback color */
-    /*background-color: /*rgba(0,0,0,0.4); /* Black w/ opacity */
-    background-color: green;
-    /*text-align: center;*/
-    display: flex; /*testing this*/
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center
-    /*align-items: center;*/
-    /*align-content: center;*/
-    /*flex-grow: 1;*/
+    background-color: pink;
+    border-radius: 10px;
+    width: 500px;
+    max-width: 75%;
+    display: flex;
+    justify-content: center;
+    top: 5%;
+    left: 24%;
 }
 
 .modal-content { /* Added this to the Udacity starter code. Help from: https://www.w3schools.com/howto/howto_css_modals.asp*/
-    background-color: pink;/*#fefefe;*/
-    margin: 15% auto; /* 15% auto from the top and centered */
-    padding: 20px; /*15%; 20px; 1rem 1.5rem;testing diff sizes */ 
-    border: 1px solid #888;
-    width: 80%; /* Could be more or less, depending on screen size */
-    position: absolute; /* testing this*/ 
-    top: 0; /*50% testing this*/
-    left: 10%; /*50% testing this*/
-    /*width: 24rem; /*testing this*/
-    border-radius: 10px; /*testing this*/
-    border-color: pink; /*testing this*/
-    text-align: center;/*testing this*/
-    display: flex; /*testing this*/
+    display: flex;
+    flex-direction: column;
     flex-wrap: wrap;
-    flex-direction: row;
-    justify-content: center; /*space-around;*/
-    /*align-items: center;*/
-    /*align-content: center;*/
-    /*flex-grow: 1; /*testing*/
+    justify-content: center;
+    margin: 10%;
 }
 
 .show-modal { /* Added this to the Udacity starter code. Help from: https://sabe.io/tutorials/how-to-create-modal-popup-box*/
     opacity: 1;
     visibility: visible;
-    transform: scale(1.0);
+    /*transform: scale(1.0);*/
     transition: visibility 0s linear 0s, opacity 0.25s 0s, transform 0.25s;
 }
 
