--- a/css/app.css
+++ b/css/app.css
@@ -137,7 +137,7 @@ h1 {
 }
 
 .modal-content { /* Added this to the Udacity starter code. Help from: https://www.w3schools.com/howto/howto_css_modals.asp*/
-    /display: flex;
+    display: flex;
     flex-direction: column;
     flex-wrap: wrap;
     justify-content: center;
